# Copyright © 2018, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

tests += [
	['av1-1-b8-01-size-16x16', files('av1-1-b8-01-size-16x16.ivf'), '0d627c5089fa1595c6e7c0626b882bb4'],
	['av1-1-b8-01-size-16x18', files('av1-1-b8-01-size-16x18.ivf'), '28bbb9b7cde14301a99c5c40c2512df2'],
	['av1-1-b8-01-size-16x32', files('av1-1-b8-01-size-16x32.ivf'), '0c5a983e19c801819de51c6218e8a910'],
	['av1-1-b8-01-size-16x34', files('av1-1-b8-01-size-16x34.ivf'), '4a634513d463f6a2be476e51beb43e60'],
	['av1-1-b8-01-size-16x64', files('av1-1-b8-01-size-16x64.ivf'), '3559bb12a2e42f648305dbdbfd85842e'],
	['av1-1-b8-01-size-16x66', files('av1-1-b8-01-size-16x66.ivf'), 'fe256b9612705a73b9242ae164a75066'],
	['av1-1-b8-01-size-18x16', files('av1-1-b8-01-size-18x16.ivf'), '43e2e0d89c2077890c9bf297f069bede'],
	['av1-1-b8-01-size-18x18', files('av1-1-b8-01-size-18x18.ivf'), 'cf2231c8bdbf11519b1f93772ad663eb'],
	['av1-1-b8-01-size-18x32', files('av1-1-b8-01-size-18x32.ivf'), '5cda44fbd480a6ed2ab7473d201dd69c'],
	['av1-1-b8-01-size-18x34', files('av1-1-b8-01-size-18x34.ivf'), '29c5953f66f4bb9f3b6a260a3cb2e9d3'],
	['av1-1-b8-01-size-18x64', files('av1-1-b8-01-size-18x64.ivf'), '57dc0496e47a42d414a8dfe3110779ea'],
	['av1-1-b8-01-size-18x66', files('av1-1-b8-01-size-18x66.ivf'), '97116b88ce33a55d515774510492cc92'],
	['av1-1-b8-01-size-196x196', files('av1-1-b8-01-size-196x196.ivf'), 'e88e97f333e4c9fa38e18c0b9a63a90d'],
	['av1-1-b8-01-size-196x198', files('av1-1-b8-01-size-196x198.ivf'), '4dbddfa86964c77c2cf2ad94334936fc'],
	['av1-1-b8-01-size-196x200', files('av1-1-b8-01-size-196x200.ivf'), '05332a9ee03e8653f81b1ca2cbf65d9c'],
	['av1-1-b8-01-size-196x202', files('av1-1-b8-01-size-196x202.ivf'), '9f7a99dd456ee072481310c16c7d5146'],
	['av1-1-b8-01-size-196x208', files('av1-1-b8-01-size-196x208.ivf'), 'd4ddede6ce632c67c9f09086b94c9651'],
	['av1-1-b8-01-size-196x210', files('av1-1-b8-01-size-196x210.ivf'), 'a1542967f9f89e275a3b90a6d7b871dd'],
	['av1-1-b8-01-size-196x224', files('av1-1-b8-01-size-196x224.ivf'), '5599969f786caca97ae2d8bd9d7a4d2a'],
	['av1-1-b8-01-size-196x226', files('av1-1-b8-01-size-196x226.ivf'), 'ac99ea48ccea2e62e818e36a3d242140'],
	['av1-1-b8-01-size-198x196', files('av1-1-b8-01-size-198x196.ivf'), 'fd1eb775c7cdd03cbd784cdb096f70a2'],
	['av1-1-b8-01-size-198x198', files('av1-1-b8-01-size-198x198.ivf'), 'e13947b78afb7aefaf9e3e632a0fc17f'],
	['av1-1-b8-01-size-198x200', files('av1-1-b8-01-size-198x200.ivf'), 'f5e642b002699e638c8d018eee62637b'],
	['av1-1-b8-01-size-198x202', files('av1-1-b8-01-size-198x202.ivf'), '924befff196c3b56b9f69272867e97a7'],
	['av1-1-b8-01-size-198x208', files('av1-1-b8-01-size-198x208.ivf'), 'c5f29a90d5261aa9fc5c74c6df124489'],
	['av1-1-b8-01-size-198x210', files('av1-1-b8-01-size-198x210.ivf'), 'd54e893722f0c9a6491d7456a89416ea'],
	['av1-1-b8-01-size-198x224', files('av1-1-b8-01-size-198x224.ivf'), '480f158807998882252455e97107aa2b'],
	['av1-1-b8-01-size-198x226', files('av1-1-b8-01-size-198x226.ivf'), '369526b5365a1dd014a982833414aefb'],
	['av1-1-b8-01-size-200x196', files('av1-1-b8-01-size-200x196.ivf'), '417b459c1641bcb977ffcfe5c8379532'],
	['av1-1-b8-01-size-200x198', files('av1-1-b8-01-size-200x198.ivf'), 'ce143205e863c1a1adfda23d192a8eaa'],
	['av1-1-b8-01-size-200x200', files('av1-1-b8-01-size-200x200.ivf'), '89f4260d13c3bf4b37c25f429dc53398'],
	['av1-1-b8-01-size-200x202', files('av1-1-b8-01-size-200x202.ivf'), 'a02ebee25913f06d13ecb7805225092b'],
	['av1-1-b8-01-size-200x208', files('av1-1-b8-01-size-200x208.ivf'), '44c0729d9a5501c02953ebcda934e0b6'],
	['av1-1-b8-01-size-200x210', files('av1-1-b8-01-size-200x210.ivf'), '598bea10eb28dcf11d615306bf5e2d6c'],
	['av1-1-b8-01-size-200x224', files('av1-1-b8-01-size-200x224.ivf'), '33e100596771d91641f9941df8a6f341'],
	['av1-1-b8-01-size-200x226', files('av1-1-b8-01-size-200x226.ivf'), 'dd58cb951625357094575a2b591781ee'],
	['av1-1-b8-01-size-202x196', files('av1-1-b8-01-size-202x196.ivf'), '44c699faf8b5946c7b52618d79c7ed72'],
	['av1-1-b8-01-size-202x198', files('av1-1-b8-01-size-202x198.ivf'), 'b2f90b3bb62fe8f6f37b38f93b1b07de'],
	['av1-1-b8-01-size-202x200', files('av1-1-b8-01-size-202x200.ivf'), '5f0a277791a1fc1b1e9f64cde008ce50'],
	['av1-1-b8-01-size-202x202', files('av1-1-b8-01-size-202x202.ivf'), 'fad85869164b4eee67755002d38f2d89'],
	['av1-1-b8-01-size-202x208', files('av1-1-b8-01-size-202x208.ivf'), 'b7b3bfca04e8145e64a9265095266205'],
	['av1-1-b8-01-size-202x210', files('av1-1-b8-01-size-202x210.ivf'), 'c5196a544ee1beb082426a5d9aff6cda'],
	['av1-1-b8-01-size-202x224', files('av1-1-b8-01-size-202x224.ivf'), 'd3098938ac8ecf7e6d1d4bec449e0ffb'],
	['av1-1-b8-01-size-202x226', files('av1-1-b8-01-size-202x226.ivf'), '585f48b79d0578fe4d9af7717dc05c72'],
	['av1-1-b8-01-size-208x196', files('av1-1-b8-01-size-208x196.ivf'), '015c4cf1963d0d9926cc6db321f5296a'],
	['av1-1-b8-01-size-208x198', files('av1-1-b8-01-size-208x198.ivf'), 'a9cad50b4f46192ec533f4ec33d3a85e'],
	['av1-1-b8-01-size-208x200', files('av1-1-b8-01-size-208x200.ivf'), '94f13e99351e96673d798be708ba9b31'],
	['av1-1-b8-01-size-208x202', files('av1-1-b8-01-size-208x202.ivf'), 'a9721471ca8a6665c37dc28f5d0ab042'],
	['av1-1-b8-01-size-208x208', files('av1-1-b8-01-size-208x208.ivf'), '12a694b3e43f473c69536ad8d8675b80'],
	['av1-1-b8-01-size-208x210', files('av1-1-b8-01-size-208x210.ivf'), '96ddb03bb5d0bcbb04b44792f848d726'],
	['av1-1-b8-01-size-208x224', files('av1-1-b8-01-size-208x224.ivf'), 'c41edb6fbbc881ab1c50735b80eb3ce5'],
	['av1-1-b8-01-size-208x226', files('av1-1-b8-01-size-208x226.ivf'), '92ccba250e5384ea4a1fab6cdb07a77b'],
	['av1-1-b8-01-size-210x196', files('av1-1-b8-01-size-210x196.ivf'), 'f971cd738538456e2e24667e0b50b89f'],
	['av1-1-b8-01-size-210x198', files('av1-1-b8-01-size-210x198.ivf'), '62cc082bcb3f8ebcc3c76312a7b62089'],
	['av1-1-b8-01-size-210x200', files('av1-1-b8-01-size-210x200.ivf'), 'dd6af81186cceef5475be6594b99557d'],
	['av1-1-b8-01-size-210x202', files('av1-1-b8-01-size-210x202.ivf'), 'f6c04e5873aa8ff5e5192f6979f5a5c3'],
	['av1-1-b8-01-size-210x208', files('av1-1-b8-01-size-210x208.ivf'), '389a67a8fad510c5b0b4b19eba07d929'],
	['av1-1-b8-01-size-210x210', files('av1-1-b8-01-size-210x210.ivf'), 'f6ebddc2da88d4aca04dbfd12f1a6f7a'],
	['av1-1-b8-01-size-210x224', files('av1-1-b8-01-size-210x224.ivf'), '49e8858ab9b64e9f6940082068d21458'],
	['av1-1-b8-01-size-210x226', files('av1-1-b8-01-size-210x226.ivf'), '1ce9ed5387ef7639ab8b5974bec827c6'],
	['av1-1-b8-01-size-224x196', files('av1-1-b8-01-size-224x196.ivf'), 'fb854be951508990ef314e27e6908c5a'],
	['av1-1-b8-01-size-224x198', files('av1-1-b8-01-size-224x198.ivf'), 'f83c66d8833dd8fd68a50257ed0bb117'],
	['av1-1-b8-01-size-224x200', files('av1-1-b8-01-size-224x200.ivf'), 'a1bdf0a2165ceff4b3ef3d1a12b98932'],
	['av1-1-b8-01-size-224x202', files('av1-1-b8-01-size-224x202.ivf'), 'fca4a7fd64fd02d15631fe2a249d44e3'],
	['av1-1-b8-01-size-224x208', files('av1-1-b8-01-size-224x208.ivf'), 'df3cdc09040d9074d3e5530d5614e62b'],
	['av1-1-b8-01-size-224x210', files('av1-1-b8-01-size-224x210.ivf'), '046a9e266879cd5670de3d184fffe6aa'],
	['av1-1-b8-01-size-224x224', files('av1-1-b8-01-size-224x224.ivf'), 'f8a4132afaeda1eb75db9c5d95c3c188'],
	['av1-1-b8-01-size-224x226', files('av1-1-b8-01-size-224x226.ivf'), '6990279ce3aa834125aba16d05539072'],
	['av1-1-b8-01-size-226x196', files('av1-1-b8-01-size-226x196.ivf'), '43407c1801909e369b8e68954cd7ff4d'],
	['av1-1-b8-01-size-226x198', files('av1-1-b8-01-size-226x198.ivf'), 'e0621a9d50c2659c2c76f043193245f6'],
	['av1-1-b8-01-size-226x200', files('av1-1-b8-01-size-226x200.ivf'), '9adefb79fd3947b1387a2c30d4e98c0c'],
	['av1-1-b8-01-size-226x202', files('av1-1-b8-01-size-226x202.ivf'), '97363a26044d1f06ac88bc0f24a45d21'],
	['av1-1-b8-01-size-226x208', files('av1-1-b8-01-size-226x208.ivf'), 'cfeb0eacef3a653e769ef33240de9fc5'],
	['av1-1-b8-01-size-226x210', files('av1-1-b8-01-size-226x210.ivf'), '5d566729e90f748893437799c598de58'],
	['av1-1-b8-01-size-226x224', files('av1-1-b8-01-size-226x224.ivf'), 'db8dfd86a80c80e20b9274464f986f35'],
	['av1-1-b8-01-size-226x226', files('av1-1-b8-01-size-226x226.ivf'), '8717076838a34fced3d230c0827e1319'],
	['av1-1-b8-01-size-32x16', files('av1-1-b8-01-size-32x16.ivf'), 'aa35af31b2ca478373b147cd18046be4'],
	['av1-1-b8-01-size-32x18', files('av1-1-b8-01-size-32x18.ivf'), 'aea9bc43370c566d37b2414ab0c3fe69'],
	['av1-1-b8-01-size-32x32', files('av1-1-b8-01-size-32x32.ivf'), '11271c70b348b6e4ffaa928860493d3f'],
	['av1-1-b8-01-size-32x34', files('av1-1-b8-01-size-32x34.ivf'), '11628409d5a5f54c81068e86f8800e23'],
	['av1-1-b8-01-size-32x64', files('av1-1-b8-01-size-32x64.ivf'), '7c3ec687b9426d5baf9f5baa3787c5e4'],
	['av1-1-b8-01-size-32x66', files('av1-1-b8-01-size-32x66.ivf'), '787538449737fa57c1f2224eed03f6c6'],
	['av1-1-b8-01-size-34x16', files('av1-1-b8-01-size-34x16.ivf'), '8caa8a97e09a93d318a95013eddfef20'],
	['av1-1-b8-01-size-34x18', files('av1-1-b8-01-size-34x18.ivf'), '6fd808b0a745782891cfe7d32d616a2c'],
	['av1-1-b8-01-size-34x32', files('av1-1-b8-01-size-34x32.ivf'), 'a72f99969f5a81f84a145c3c9e64a978'],
	['av1-1-b8-01-size-34x34', files('av1-1-b8-01-size-34x34.ivf'), 'f50fe1ebb08ad9391be91999c747e3b8'],
	['av1-1-b8-01-size-34x64', files('av1-1-b8-01-size-34x64.ivf'), 'e61a5ccd939286c8489a48d12f4e3968'],
	['av1-1-b8-01-size-34x66', files('av1-1-b8-01-size-34x66.ivf'), '1d1101b9e19f2f66b3cafdabf9c43c04'],
	['av1-1-b8-01-size-64x16', files('av1-1-b8-01-size-64x16.ivf'), '60ffe5db769683d4500971122ba63218'],
	['av1-1-b8-01-size-64x18', files('av1-1-b8-01-size-64x18.ivf'), '052dddd7525dd90c7b4fa2565b7c42d3'],
	['av1-1-b8-01-size-64x32', files('av1-1-b8-01-size-64x32.ivf'), '4d7271203d3d685fcf4f9f1db4cac100'],
	['av1-1-b8-01-size-64x34', files('av1-1-b8-01-size-64x34.ivf'), '74f6149022bd4836b2e6dd926fc32804'],
	['av1-1-b8-01-size-64x64', files('av1-1-b8-01-size-64x64.ivf'), 'c2796fb02c50ba3914bf3177a987dfae'],
	['av1-1-b8-01-size-64x66', files('av1-1-b8-01-size-64x66.ivf'), '3c3cee113a8809cb587e2a2c2dd27469'],
	['av1-1-b8-01-size-66x16', files('av1-1-b8-01-size-66x16.ivf'), 'dd59500c154ea03953e86ecac01ba3b7'],
	['av1-1-b8-01-size-66x18', files('av1-1-b8-01-size-66x18.ivf'), 'd4d412f3ea0c74e42bc0e7e931c5307f'],
	['av1-1-b8-01-size-66x32', files('av1-1-b8-01-size-66x32.ivf'), '8867483a77206485df04c4c9c2070c06'],
	['av1-1-b8-01-size-66x34', files('av1-1-b8-01-size-66x34.ivf'), 'c3d08f08bb824718c28e08be5cab19f2'],
	['av1-1-b8-01-size-66x64', files('av1-1-b8-01-size-66x64.ivf'), '76897ad7e13d9acc0d0737dd28b80f29'],
	['av1-1-b8-01-size-66x66', files('av1-1-b8-01-size-66x66.ivf'), '616dd3789d5a82a822ceba96ec972143'],
]
