# Copyright © 2020, VideoLAN and dav1d authors
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this
#    list of conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice,
#    this list of conditions and the following disclaimer in the documentation
#    and/or other materials provided with the distribution.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND
# ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
# WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR
# ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
# (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES;
# LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND
# ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
# (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS
# SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

vq_tests = [
	['Syntax_AV1_mainb8ss420_432x240_001_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_001_vq_aom_ctest_4.2.stripped.ivf'),
     '74cd1c55dc974ee2d13bf6b2a38aeecb'],
	['Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2.stripped.ivf'),
     'a9249d720bf9a7dcddce9e358e9aa967'],
	['Syntax_AV1_mainb8ss420_432x240_003_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_003_vq_aom_ctest_4.2.stripped.ivf'),
     '713a7b52a34dea39a6ff3f1064fe5a2c'],
	['Syntax_AV1_mainb8ss420_432x240_004_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_004_vq_aom_ctest_4.2.stripped.ivf'),
     '48ee4dcff7e6d957c18b49d0957d18bc'],
	['Syntax_AV1_mainb8ss420_432x240_005_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_005_vq_aom_ctest_4.2.stripped.ivf'),
     'd2fb6c9ea434a3aa4cdcec9a4c962385'],
	['Syntax_AV1_mainb8ss420_432x240_006_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_006_vq_aom_ctest_4.2.stripped.ivf'),
     'a2807a9eb0defd80dd8f0e8a2ce51467'],
	['Syntax_AV1_mainb8ss420_432x240_007_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_007_vq_aom_ctest_4.2.stripped.ivf'),
     '133ce9ed4cdf9bb769f75bfd664eeced'],
	['Syntax_AV1_mainb8ss420_432x240_008_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_008_vq_aom_ctest_4.2.stripped.ivf'),
     'fb8b6169a2f3483073a74ec9527db8b9'],
	['Syntax_AV1_mainb8ss420_432x240_009_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_009_vq_aom_ctest_4.2.stripped.ivf'),
     'e8e6ff2225b8e27a0706b1061e767d06'],
	['Syntax_AV1_mainb8ss420_432x240_010_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_010_vq_aom_ctest_4.2.stripped.ivf'),
     '4fd73df63f14c0f13a1f752325a9f52e'],
	['Syntax_AV1_mainb8ss420_432x240_011_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_011_vq_aom_ctest_4.2.stripped.ivf'),
     '120b41c7ecfc08d698075ead2ecb5d18'],
	['Syntax_AV1_mainb8ss420_432x240_012_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_012_vq_aom_ctest_4.2.stripped.ivf'),
     '622ffe4e872bd8bbdc2ffb85db2ef096'],
	['Syntax_AV1_mainb8ss420_432x240_013_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_013_vq_aom_ctest_4.2.stripped.ivf'),
     '523e4ce0c50e7fbae3709c4713bc30f0'],
	['Syntax_AV1_mainb8ss420_432x240_014_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_014_vq_aom_ctest_4.2.stripped.ivf'),
     '05e74cdd6573c1eac141179b9698404c'],
	['Syntax_AV1_mainb8ss420_432x240_015_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_015_vq_aom_ctest_4.2.stripped.ivf'),
     'd71fce010eba98084ad60559c2eb7b29'],
	['Syntax_AV1_mainb8ss420_432x240_016_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_016_vq_aom_ctest_4.2.stripped.ivf'),
     '2e64597b937a80a5c52317bd4c676c3f'],
	['Syntax_AV1_mainb8ss420_432x240_017_vq_aom_ctest_4.2',
     files('Syntax_AV1_mainb8ss420_432x240_017_vq_aom_ctest_4.2.stripped.ivf'),
     'd762340d4f9f79e9e470242078976302'],
]

foreach vq_test : vq_tests
    test(vq_test[0], dav1d, suite: 'testdata-8',
         args: dav1d_test_args + ['-i', vq_test[1], '--verify', vq_test[2]])
endforeach

# test with film grain applied against dav1d's md5
test('Syntax_AV1_mainb8ss420_432x240_018_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_018_vq_aom_ctest_4.2.stripped.ivf'),
           '--filmgrain',  '1',
           '--verify', 'e3464b3032d6ca6b2efcab5a91071509'])

test('Syntax_AV1_mainb8ss420_432x240_019_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
     args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_019_vq_aom_ctest_4.2.stripped.ivf'),
           '--verify', '5744d34d70c61ab0ebb0f0a768e03d94'])

# test --oppoint 0
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '0',
           '--verify', 'b57b19930751335eabca6da2acc30305'])
# test --oppoint 1
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '1',
           '--verify', 'b4f292e45d800892eae9e7bd40e0dd06'])
# test --oppoint 2
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '2',
           '--verify', '6a1e386e97af85c75cf5c69ad9785376'])
# test --oppoint 3
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '3',
           '--verify', 'a3c4d87cc33ec8b43fa84ca9741beafd'])
# test --oppoint 4
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '4',
           '--verify', 'a7af5929fd4511c76c3acecc7036378d'])
# test --oppoint 5
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '5',
           '--verify', '6bc7db62429c4f5518014541e19464c1'])
# test --oppoint 6
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '6',
           '--verify', 'a6bca76a8c45d49a611d42c14af49b82'])
# test --oppoint 7
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '7',
           '--verify', 'ce9d9f00c1f788613434b70ca94eca0e'])
# test --oppoint 8
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '8',
           '--verify', 'ef841e5eeb13b0595c4c34008fe5fa48'])
# test --oppoint 9
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '0', '--oppoint', '9',
           '--verify', '2a10b9965f645b82da079cb1a6a6caba'])
# test --alllayers 1
test('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_020_vq_aom_ctest_4.2.stripped.ivf'),
           '--alllayers', '1', '--oppoint', '0',
           '--verify', 'b57b19930751335eabca6da2acc30305'])

# test --decodeframetype intra
test('Syntax_AV1_mainb8ss420_432x240_001_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_001_vq_aom_ctest_4.2.stripped.ivf'),
           '--decodeframetype', 'intra',
           '--verify', '83e6521dd4d8db448bc5618ce505c991'])

# test --decodeframetype reference
test('Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2.stripped.ivf'),
           '--decodeframetype', 'reference',
           '--verify', '60c2207b751fffd6c5d67fcc176065a7'])

# test --decodeframetype key
test('Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2', dav1d, suite: 'testdata-8',
    args: dav1d_test_args + ['-i', files('Syntax_AV1_mainb8ss420_432x240_002_vq_aom_ctest_4.2.stripped.ivf'),
           '--decodeframetype', 'key',
           '--verify', '0e8c8207bafea5c7ebce18673ece6634'])
